metadata/objects/Meter_Reading__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meter Readings</relationshipLabel>
        <relationshipName>Meter_Readings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_Reading_By_Reading_Time__c</fullName>
        <label>First Reading By Reading Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Reading_By_Reading_Time__c</fullName>
        <label>Last Reading By Reading Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nbr_Of_Readings__c</fullName>
        <label>Nbr Of Readings</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Newest_By_Last_Modified_Date__c</fullName>
        <label>Newest By Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Of_Days_Between_Last_And_First_Reading__c</fullName>
        <label># Of Days Between Last And First Reading</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oldest_Reading_By_Last_Modified_Date__c</fullName>
        <label>Oldest Reading By Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reading_Date__c</fullName>
        <label>Reading Date</label>
        <type>Date</type>
    </fields>
    <label>Meter Reading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>First_Reading_By_Reading_Time__c</columns>
        <columns>Last_Reading_By_Reading_Time__c</columns>
        <columns>Nbr_Of_Readings__c</columns>
        <columns>Newest_By_Last_Modified_Date__c</columns>
        <columns>Oldest_Reading_By_Last_Modified_Date__c</columns>
        <columns>Of_Days_Between_Last_And_First_Reading__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Meter Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Readings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>